# SQLExam

./: .env template.txt  .gitignore  Cargo.toml  README.md  env
front/: package-lock.json  package.json
front/src/: App.jsx  index.css  main.jsx
front/src/CSS/: App.css  HomePageProfessor.css  NewStudents.css  ProfessorExam.css  ProfessorLogin.css  StudentLogin.css  ViewExam.css
front/src/components/: buttonredirect.jsx  getback.jsx
front/src/pages/: App.jsx  Exam.jsx  ExamStudent.jsx  HomePageProfessor.jsx  HomeStudent.jsx  NewStudents.jsx  ProfessorExam.jsx  ProfessorLogin.jsx  StudentExam.jsx  StudentLogin.jsx  ViewExam.jsx
src/: aux_fns.rs  handlers.rs  main.rs  models.rs
